commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -4,14 +4,14 @@ author: rick-anderson
 description: Découvrez comment migrer un projet ASP.NET Core 2,2 vers ASP.NET Core 3,0.
 ms.author: riande
 ms.custom: mvc
-ms.date: 09/06/2019
+ms.date: 09/16/2019
 uid: migration/22-to-30
-ms.openlocfilehash: c4b95a2acd0181e6389533709789fe97ff22ffb9
-ms.sourcegitcommit: 215954a638d24124f791024c66fd4fb9109fd380
+ms.openlocfilehash: ce16961c8a30ed4b905d5a20b2230fbde269a3ed
+ms.sourcegitcommit: b1e480e1736b0fe0e4d8dce4a4cf5c8e47fc2101
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/18/2019
-ms.locfileid: "71081639"
+ms.lasthandoff: 09/19/2019
+ms.locfileid: "71108042"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -57,7 +57,7 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 
 * Met à `Version` jour l’attribut `<PackageReference>` sur les `Microsoft.AspNetCore.*` éléments restants pour les packages vers l' `3.0.0-preview5-19227-01`aperçu actuel (par exemple,).
 
-  S’il n’existe aucune version 3,0 d’un package, le package peut avoir été déconseillé dans 3,0. Un grand nombre de ces packages font `Microsoft.AspNetCore.App` partie de et ne doivent pas être référencés individuellement. Pour obtenir une liste préliminaire des packages qui ne sont plus produits dans 3,0, consultez [arrêter la production de packages pour les assemblys de Framework partagé dans 3,0 (ASPNET/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et référencés par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+  S’il n’existe pas de version 3,0 d’un package, le package peut avoir été déconseillé dans 3,0. Un grand nombre de ces packages font `Microsoft.AspNetCore.App` partie de et ne doivent pas être référencés individuellement. Pour obtenir une liste préliminaire des packages qui ne sont plus produits dans 3,0, consultez [arrêter la production de packages pour les assemblys de Framework partagé dans 3,0 (ASPNET/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et référencés par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
 
 * Les assemblys de plusieurs composants notables ont été `Microsoft.AspNetCore.App` supprimés de dans 3,0. Ajoutez `<PackageReference>` des éléments si vous utilisez des API à partir de packages listés dans des [assemblys en cours de suppression de Microsoft. AspNetCore. app 3,0 (ASPNET/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
 
@@ -80,6 +80,121 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 * Ajoutez la [prise en charge de JSON.net](#jsonnet-support).
 
 * Les projets sont par défaut du [modèle d’hébergement in-process](xref:host-and-deploy/aspnet-core-module#in-process-hosting-model) dans ASP.net Core 3,0 ou version ultérieure. Vous pouvez éventuellement supprimer la `<AspNetCoreHostingModel>` propriété dans le fichier projet si sa valeur est. `InProcess`
+
+## <a name="kestrel"></a>Kestrel
+
+### <a name="configuration"></a>Configuration
+
+Migrer la configuration Kestrel vers le générateur d’hôte `ConfigureWebHostDefaults` Web fourni par (*Program.cs*) :
+
+```csharp
+public static IHostBuilder CreateHostBuilder(string[] args) =>
+    Host.CreateDefaultBuilder(args)
+        .ConfigureWebHostDefaults(webBuilder =>
+        {
+            webBuilder.ConfigureKestrel(serverOptions =>
+            {
+                // Set properties and call methods on options
+            })
+            .UseStartup<Startup>();
+        });
+```
+
+Si l’application crée manuellement l’hôte avec `HostBuilder`, appelez `UseKestrel` sur le générateur d’hôte Web `ConfigureWebHostDefaults`dans :
+
+```csharp
+public static void Main(string[] args)
+{
+    var host = new HostBuilder()
+        .UseContentRoot(Directory.GetCurrentDirectory())
+        .ConfigureWebHostDefaults(webBuilder =>
+        {
+            webBuilder.UseKestrel(serverOptions =>
+            {
+                // Set properties and call methods on options
+            })
+            .UseIISIntegration()
+            .UseStartup<Startup>();
+        })
+        .Build();
+
+    host.Run();
+}
+```
+
+### <a name="connection-middleware-replaces-connection-adapters"></a>L’intergiciel de connexion remplace les adaptateurs de connexion
+
+Les adaptateurs de<xref:Microsoft.AspNetCore.Server.Kestrel.Core.Adapter.Internal.IConnectionAdapter>connexion () ont été supprimés de Kestrel. Remplacer les adaptateurs de connexion par un intergiciel de connexion. L’intergiciel de connexion est similaire à l’intergiciel (middleware) HTTP dans le pipeline ASP.NET Core, mais pour les connexions de niveau inférieur. Journalisation HTTPs et connexion :
+
+* Ont été déplacés des adaptateurs de connexion vers l’intergiciel de connexion.
+* Ces méthodes d’extension fonctionnent comme dans les versions précédentes de ASP.NET Core. 
+
+Pour plus d’informations, consultez [l’exemple TlsFilterConnectionHandler dans la section ListenOptions. Protocols de l’article Kestrel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#listenoptionsprotocols).
+
+### <a name="transport-abstractions-moved-and-made-public"></a>Abstractions de transport déplacées et rendues publiques
+
+La couche de transport Kestrel a été exposée en tant qu' `Connections.Abstractions`interface publique dans. Dans le cadre de ces mises à jour :
+
+* `Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions`et les types associés ont été supprimés.
+* <xref:Microsoft.AspNetCore.Server.Kestrel.KestrelServerOptions.NoDelay>a été déplacé <xref:Microsoft.AspNetCore.Server.Kestrel.Core.ListenOptions> de vers les options de transport.
+* <xref:Microsoft.AspNetCore.Server.Kestrel.Transport.Abstractions.Internal.SchedulingMode>a été supprimé <xref:Microsoft.AspNetCore.Server.Kestrel.KestrelServerOptions>de.
+
+Pour plus d’informations, consultez les ressources GitHub suivantes :
+
+* [Abstractions de réseau client/serveur (ASPNET/AspNetCore #10308)](https://github.com/aspnet/AspNetCore/issues/10308)
+* [Implémenter l’abstraction de l’écouteur socle et plat Kestrel en haut (ASPNET/AspNetCore #10321)](https://github.com/aspnet/AspNetCore/pull/10321)
+
+### <a name="kestrel-request-trailer-headers"></a>En-têtes de la demande Kestrel
+
+Pour les applications qui ciblent des versions antérieures de ASP.NET Core :
+
+* Kestrel ajoute des en-têtes de code de fin en bloc HTTP/1.1 dans la collection d’en-têtes de demande.
+* Les codes de fin sont disponibles une fois que le corps de la demande est lu jusqu’à la fin.
+
+Cela pose des problèmes d’ambiguïté entre les en-têtes et les codes de fin, de sorte que les codes de fin`RequestTrailerExtensions`ont été déplacés vers une nouvelle collection () en 3,0.
+
+Les codes de fin de requête HTTP/2 sont :
+
+* Non disponible dans ASP.NET Core 2,2.
+* Disponible dans 3,0 en `RequestTrailerExtensions`tant que.
+
+De nouvelles méthodes d’extension de demande sont présentes pour accéder à ces codes de fin. Comme avec HTTP/1.1, les codes de fin sont disponibles une fois que le corps de la demande est lu jusqu’à la fin.
+
+Pour la version 3,0, les méthodes `RequestTrailerExtensions` suivantes sont disponibles :
+
+* `GetDeclaredTrailers`Obtient l’en `Trailer` -tête de la demande qui répertorie les codes de fin à attendre après le corps. &ndash;
+* `SupportsTrailers`&ndash; Indique si la demande prend en charge la réception des en-têtes de code de fin.
+* `CheckTrailersAvailable`&ndash; Vérifie si la demande prend en charge les codes de fin et s’ils sont disponibles pour la lecture. Cette vérification ne suppose pas qu’il y a des codes de fin à lire. Il se peut qu’il n’y ait aucune `true` remorque à lire même si est retourné par cette méthode.
+* `GetTrailer`&ndash; Obtient l’en-tête de fin demandé à partir de la réponse. Vérifiez `SupportsTrailers` avant d' `GetTrailer`appeler, ou <xref:System.NotSupportedException> un peut se produire si la requête ne prend pas en charge les en-têtes de fin.
+
+Pour plus d’informations, consultez [put Request queues in a distinct collection (ASPNET/AspNetCore #10410)](https://github.com/aspnet/AspNetCore/pull/10410).
+
+### <a name="allowsynchronousio-disabled"></a>AllowSynchronousIO désactivé
+
+`AllowSynchronousIO`active ou désactive les API d’e/s synchrones `HttpReqeuest.Body.Read`, `HttpResponse.Body.Write`telles que `Stream.Flush`, et. Ces API sont une source de privation de thread conduisant à des blocages d’application. Dans 3,0, `AllowSynchronousIO` est désactivé par défaut. Pour plus d’informations, consultez [la section e/s synchrone dans l’article Kestrel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#synchronous-io).
+
+Outre l’activation `AllowSynchronousIO` des options `ConfigureKestrel`de avec, les e/s synchrones peuvent également être remplacées par demande comme une atténuation temporaire :
+
+```csharp
+var syncIOFeature = HttpContext.Features.Get<IHttpBodyControlFeature>();
+
+if (syncIOFeature != null)
+{
+    syncIOFeature.AllowSynchronousIO = true;
+}
+```
+
+Si vous avez des difficultés <xref:System.IO.TextWriter> avec les implémentations ou d’autres flux qui appellent des API synchrones dans <xref:System.IO.Stream.DisposeAsync*> [dispose](/dotnet/standard/garbage-collection/implementing-dispose), appelez plutôt la nouvelle API.
+
+Pour plus d’informations, consultez [[Announcement] AllowSynchronousIO disabled in All Servers (ASPNET/AspNetCore #7644)](https://github.com/aspnet/AspNetCore/issues/7644).
+
+### <a name="microsoftaspnetcoreserverkestrelhttps-assembly-removed"></a>Assembly Microsoft. AspNetCore. Server. Kestrel. https supprimé
+
+Dans ASP.NET Core 2,1, le contenu de *Microsoft. AspNetCore. Server. Kestrel. https. dll* a été déplacé vers *Microsoft. AspNetCore. Server. Kestrel. Core. dll*. Il s’agissait d’une mise à jour `TypeForwardedTo` sans rupture utilisant des attributs. Pour 3,0, l’assembly vide *Microsoft. AspNetCore. Server. Kestrel. https. dll* (et le package NuGet) a été supprimé.
+
+Les bibliothèques référençant [Microsoft. AspNetCore. Server. Kestrel. https](https://www.nuget.org/packages/Microsoft.AspNetCore.Server.Kestrel.Https) doivent mettre à jour les dépendances de ASP.NET Core à 2,1 ou une version ultérieure.
+
+Les applications et les bibliothèques qui ciblent ASP.NET Core 2,1 ou version ultérieure doivent supprimer toutes les références directes au package [Microsoft. AspNetCore. Server. Kestrel. https](https://www.nuget.org/packages/Microsoft.AspNetCore.Server.Kestrel.Https) .
 
 ## <a name="jsonnet-support"></a>Support Json.NET
 
@@ -158,7 +273,7 @@ public void ConfigureServices(IServiceCollection services)
 }
 ```
 
-## <a name="update-routing-startup-code"></a>Mettre à jour le code de démarrage du routage
+## <a name="routing-startup-code"></a>Routage du code de démarrage
 
 Si une application appelle `UseMvc` ou `UseSignalR`, migrez l’application vers le [routage des points de terminaison](xref:fundamentals/routing) , si possible. Pour améliorer la compatibilité du routage des points de terminaison avec les versions précédentes de MVC, nous avons rétabli certaines des modifications apportées à la génération d’URL introduites dans ASP.NET Core 2,2. Si vous avez rencontré des problèmes lors de l’utilisation du routage de point de terminaison dans 2,2, attendez-vous à des améliorations de ASP.NET Core 3,0, avec les exceptions suivantes :
 
@@ -229,6 +344,25 @@ public void Configure(IApplicationBuilder app)
     });
 }
 ```
+
+### <a name="health-checks"></a>Contrôles d’intégrité
+
+Les contrôles d’intégrité utilisent le routage de point de terminaison avec l’hôte générique. Dans `Startup.Configure`, appelez `MapHealthChecks` sur le générateur de points de terminaison avec l’URL de point de terminaison ou le chemin d’accès relatif :
+
+```csharp
+app.UseEndpoints(endpoints =>
+{
+    endpoints.MapHealthChecks("/health");
+});
+```
+
+Les points de terminaison de contrôle d’intégrité peuvent :
+
+* Spécifiez un ou plusieurs hôtes/ports autorisés.
+* Exiger une autorisation.
+* Exiger CORS.
+
+Pour plus d'informations, consultez <xref:host-and-deploy/health-checks>.
 
 ### <a name="security-middleware-guidance"></a>Aide sur le middleware de sécurité
 
@@ -370,6 +504,7 @@ L’exemple suivant est identique à l’exemple précédent `DefaultPolicy` , m
 public void ConfigureServices(IServiceCollection services)
 {
     ...
+
     services.AddAuthorization(options =>
     {
         options.FallbackPolicy = new AuthorizationPolicyBuilder()
@@ -426,7 +561,7 @@ public void Configure(IApplicationBuilder app)
 
 La protection est implémentée pour certains scénarios. `UseEndpoint`l’intergiciel (middleware) lève une exception si une stratégie d’autorisation ou CORS est ignorée en raison d’un intergiciel (middleware) manquant. La prise en charge de l’analyseur pour fournir des commentaires supplémentaires sur une configuration incompatible est en cours.
 
-### <a name="migrate-signalr"></a>Migrer Signalr
+### <a name="signalr"></a>SignalR
 
 Le mappage des hubs Signalr est désormais effectué `UseEndpoints`à l’intérieur de.
 
@@ -459,7 +594,7 @@ services.AddSignalR(hubOptions =>
 
 Dans ASP.net Core 2,2, vous pouviez définir la `TransportMaxBufferSize` valeur et pour contrôler la taille de message maximale. Dans ASP.NET Core 3,0, cette option contrôle désormais uniquement la taille maximale avant que la contre-pression soit observée.
 
-### <a name="migrate-mvc-controllers"></a>Migrer des contrôleurs MVC
+### <a name="mvc-controllers"></a>Contrôleurs MVC
 
 Le mappage de contrôleurs a désormais `UseEndpoints`lieu à l’intérieur de.
 
@@ -498,7 +633,7 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
-### <a name="migrate-razor-pages"></a>Migrer Razor Pages
+### <a name="razor-pages"></a>Pages Razor
 
 Le mappage de Razor Pages a maintenant `UseEndpoints`lieu à l’intérieur de.
 
@@ -543,7 +678,7 @@ services.AddControllersWithViews(options => options.EnableEndpointRouting = fals
 services.AddRazorPages().AddMvcOptions(options => options.EnableEndpointRouting = false);
 ```
 
-### <a name="migrate-health-checks"></a>Migrer les contrôles d’intégrité
+### <a name="health-checks"></a>Contrôles d’intégrité
 
 Les contrôles d’intégrité peuvent être utilisés en tant que *routeur* avec routage des points de terminaison.
 
@@ -598,7 +733,7 @@ Les applications qui n’utilisent pas *Microsoft. AspNetCore. Authorization. Po
 
 Pour plus d’informations, consultez [modification avec `AddAuthorization(o =>`rupture dans) dans un assembly différent #386](https://github.com/aspnet/Announcements/issues/386).
 
-## <a name="update-signalr-code"></a>Mettre à jour le code Signalr
+## <a name="signalr-code"></a>Code signalr
 
 Le client JavaScript signalr est passé de `@aspnet/signalr` à `@microsoft/signalr`. Pour réagir à cette modification, modifiez les références dans les fichiers *Package. JSON* , les instructions require et les instructions Import ECMAScript.
 
