commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/16/2019
 uid: migration/22-to-30
-ms.openlocfilehash: ce16961c8a30ed4b905d5a20b2230fbde269a3ed
-ms.sourcegitcommit: b1e480e1736b0fe0e4d8dce4a4cf5c8e47fc2101
+ms.openlocfilehash: fd2b288df92f734ff51b4924911b432a67a0bd3a
+ms.sourcegitcommit: a11f09c10ef3d4eeab7ae9ce993e7f30427741c1
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/19/2019
-ms.locfileid: "71108042"
+ms.lasthandoff: 09/20/2019
+ms.locfileid: "71149368"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -37,47 +37,185 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2,2 existant 
 
 ## <a name="update-the-project-file"></a>Mettre à jour le fichier projet
 
-* Définissez le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) sur `netcoreapp3.0`:
+### <a name="update-the-target-framework"></a>Mettre à jour la version cible de .NET Framework
 
-  ```xml
+ASP.NET Core 3.0 et ultérieur s’exécute uniquement sur .NET Core. Définissez le [moniker du Framework cible (TFM)](/dotnet/standard/frameworks) sur `netcoreapp3.0`:
+
+```xml
   <TargetFramework>netcoreapp3.0</TargetFramework>
-  ```
+```
 
-* Supprimez `<PackageReference>` l’un des sous-packages [Microsoft. AspNetCore. All](xref:fundamentals/metapackage) ou [Microsoft. AspNetCore. app](xref:fundamentals/metapackage-app) .
+### <a name="remove-obsolete-package-references"></a>Supprimer les références de package obsolètes
 
-* Supprimez `<PackageReference>` tout dans le package [Microsoft. AspNetCore. Razor. Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) .
+ASP.NET Core ne produit plus un grand nombre de fonctionnalités de packages NuGet. Ces références de package doivent être supprimées de votre fichier projet. Pour afficher la liste complète des packages qui ne sont plus produits, voir ci-dessous :
 
-* Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers), `<PackageReference>` supprimez tout élément du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) . Modifiez votre fichier projet pour utiliser l’analyseur fourni dans le cadre de la kit SDK .NET Core :
+<details>
+    <summary>Cliquez ici pour développer la liste des packages qui ne sont plus produits</summary>
+
+    * Microsoft.AspNetCore
+    * Microsoft.AspNetCore.All
+    * Microsoft.AspNetCore.App
+    * Microsoft. AspNetCore. anti-contrefaçon
+    * Microsoft. AspNetCore. Authentication
+    * Microsoft. AspNetCore. Authentication. Abstracts
+    * Microsoft. AspNetCore. Authentication. Cookies
+    * Microsoft. AspNetCore. Authentication. Core
+    * Microsoft. AspNetCore. Authentication. JwtBearer
+    * Microsoft. AspNetCore. Authentication. OAuth
+    * Microsoft. AspNetCore. Authentication. OpenIdConnect
+    * Microsoft. AspNetCore. Authorization
+    * Microsoft. AspNetCore. Authorization. Policy
+    * Microsoft. AspNetCore. CookiePolicy
+    * Microsoft. AspNetCore. cors
+    * Microsoft. AspNetCore. Cryptography. Internal
+    * Microsoft. AspNetCore. Cryptography. keydérivation
+    * Microsoft.AspNetCore.DataProtection
+    * Microsoft. AspNetCore. DataProtection. Abstracts
+    * Microsoft. AspNetCore. DataProtection. extensions
+    * Microsoft. AspNetCore. Diagnostics
+    * Microsoft. AspNetCore. Diagnostics. HealthChecks
+    * Microsoft.AspNetCore.HostFiltering
+    * Microsoft.AspNetCore.Hosting
+    * Microsoft. AspNetCore. Hosting. Abstracts
+    * Microsoft. AspNetCore. Hosting. Server. Abstracts
+    * Microsoft. AspNetCore. http
+    * Microsoft. AspNetCore. http. Abstracts
+    * Microsoft. AspNetCore. http. Connections
+    * Microsoft. AspNetCore. http. extensions
+    * Microsoft. AspNetCore. http. Features
+    * Microsoft. AspNetCore. HttpOverrides
+    * Microsoft. AspNetCore. HttpsPolicy
+    * Microsoft. AspNetCore. Identity
+    * Microsoft. AspNetCore. Localization
+    * Microsoft. AspNetCore. Localization. Routing
+    * Microsoft. AspNetCore. MiddlewareAnalysis
+    * Microsoft.AspNetCore.Mvc
+    * Microsoft. AspNetCore. Mvc. Abstracts
+    * Microsoft. AspNetCore. Mvc. Analysis
+    * Microsoft. AspNetCore. Mvc. ApiExplorer
+    * Microsoft. AspNetCore. Mvc. API. Analysis
+    * Microsoft. AspNetCore. Mvc. Core
+    * Microsoft. AspNetCore. Mvc. cors
+    * Microsoft. AspNetCore. Mvc. DataAnnotations
+    * Microsoft. AspNetCore. Mvc. Formatters. JSON
+    * Microsoft. AspNetCore. Mvc. Formatters. Xml
+    * Microsoft. AspNetCore. Mvc. Localization
+    * Microsoft.AspNetCore.Mvc.Razor
+    * Microsoft. AspNetCore. Mvc. Razor. extensions
+    * Microsoft. AspNetCore. Mvc. Razor. ViewCompilation
+    * Microsoft. AspNetCore. Mvc. RazorPages
+    * Microsoft. AspNetCore. Mvc. TagHelpers
+    * Microsoft. AspNetCore. Mvc. ViewFeatures
+    * Microsoft. AspNetCore. Razor
+    * Microsoft. AspNetCore. Razor. Runtime
+    * Microsoft. AspNetCore. Razor. Design
+    * Microsoft. AspNetCore. ResponseCaching
+    * Microsoft. AspNetCore. ResponseCaching. Abstracts
+    * Microsoft. AspNetCore. ResponseCompression
+    * Microsoft. AspNetCore. réécriture
+    * Microsoft.AspNetCore.Routing
+    * Microsoft. AspNetCore. Routing. Abstracts
+    * Microsoft. AspNetCore. Server. HttpSys
+    * Microsoft. AspNetCore. Server. IIS
+    * Microsoft. AspNetCore. Server. IISIntegration
+    * Microsoft. AspNetCore. Server. Kestrel
+    * Microsoft. AspNetCore. Server. Kestrel. Core
+    * Microsoft. AspNetCore. Server. Kestrel. https
+    * Microsoft. AspNetCore. Server. Kestrel. transport. Abstracts
+    * Microsoft. AspNetCore. Server. Kestrel. transport. Sockets
+    * Microsoft. AspNetCore. session
+    * Microsoft. AspNetCore. Signalr
+    * Microsoft. AspNetCore. Signalr. Core
+    * Microsoft.AspNetCore.StaticFiles
+    * Microsoft. AspNetCore. WebSockets
+    * Microsoft. AspNetCore. WebUtilities
+    * Microsoft.Net. http. en-têtes</details>
+
+### <a name="framework-reference"></a>Référence du Framework
+
+Les fonctionnalités de ASP.net core qui étaient disponibles via l’un des packages répertoriés ci-dessus sont disponibles `Microsoft.AspNetCore.App` dans le cadre de l’infrastructure partagée.  L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et qui comprend un composant d’exécution et un pack de ciblage. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
+
+
+* Les projets qui ciblent le `Microsoft.NET.Sdk.Web` Kit de développement logiciel (SDK) référencent implicitement le `Microsoft.AspNetCore.App` Framework.
+
+Aucune référence supplémentaire n’est requise pour ces projets :
+
+```xml
+<Project SDK="Microsoft.NET.Sdk.Web">
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+  </PropertyGroup>
+    ...
+</Project>
+```
+
+* Les projets qui `Microsoft.NET.Sdk` ciblent ou `Microsoft.NET.Sdk.Razor` le kit de développement `FrameworkReference` logiciel `Microsoft.AspNetCore.App`(SDK) doivent ajouter un explicite à :
+
+```xml
+<Project SDK="Microsoft.NET.Sdk.Razor">
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+    ...
+</Project>
+```
+
+### <a name="add-package-references-for-removed-assemblies"></a>Ajouter des références de package pour les assemblys supprimés
+
+ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de la `Microsoft.AspNetCore.App` référence du package. Pour continuer à utiliser les fonctionnalités fournies par ces assemblys, référencez les versions 3,0 des packages correspondants :
+
+* Entity Framework Core-consultez https://docs.microsoft.com/en-us/ef/core/providers/index pour plus d’informations sur le référencement du package spécifique du fournisseur de base de données.
+
+* La prise en charge de l’interface utilisateur des identités pour l' [interface utilisateur d’identité](xref:security/authentication/identity) peut être ajoutée en référençant le package [Microsoft. AspNetCore. Identity. UI](https://www.nuget.org/packages/Microsoft.AspNetCore.Identity.UI) .
+
+* Services SPA
+    * [Microsoft. AspNetCore. SpaServices](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices)
+    * [Microsoft. AspNetCore. SpaServices. extensions](https://www.nuget.org/packages/Microsoft.AspNetCore.SpaServices.Extensions)
+
+* Authentification : la prise en charge des flux d’authentification tiers est disponible sous forme de packages NuGet :
+
+    * [OAuth Facebook](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Facebook)
+    * [Google OAuth](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Google)
+    * [Jeton du porteur OpenID Connect](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.JwtBearer)
+    * [Authentification du compte Microsoft](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.MicrosoftAccount)
+    * [Authentification OpenID Connect](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.OpenIdConnect)
+    * [OAuth Twitter](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.Twitter)
+    * [Authentification WsFederation](https://www.nuget.org/packages/Microsoft.AspNetCore.Authentication.WsFederation)
+
+* Prise en charge de la mise en `System.Net.HttpClient` forme et de la négociation du contenu pour-le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) `System.Net.HttpClient` offre `PostJsonAsync` une extensibilité utile avec les API telles que `ReadAsAsync`, etc.
+
+### <a name="analyzer-support"></a>Prise en charge de l’analyseur
+
+* Les projets qui `Microsoft.NET.Sdk.Web` ciblent implicitement des analyseurs de référence ont été fournis précédemment dans le cadre du package [Microsoft. AspNetCore. Mvc. Analysis](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Analyzers/) . Aucune référence supplémentaire n’est requise pour les activer.
+
+* Si votre application utilise des [analyseurs d’API](xref:web-api/advanced/analyzers) livrés précédemment à l’aide du package [Microsoft. AspNetCore. Mvc. API. Analyzers](https://www.nuget.org/packages/Microsoft.AspNetCore.Mvc.Api.Analyzers/) , modifiez votre fichier projet pour référencer les analyseurs fournis dans le cadre du kit de développement logiciel (SDK) Web .net Core :
+
+```xml
+<Project SDK="Microsoft.NET.Sdk.Web">
+  <PropertyGroup>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+  </PropertyGroup>
+
+  ...
+</Project>
+```
+
+### <a name="razor-class-library"></a>Bibliothèque de classes Razor
+
+Les projets de bibliothèque de classes Razor qui fournissent des composants d’interface `RazorLangVersion` utilisateur pour MVC doivent définir la propriété dans le fichier projet.
 
 ```xml
 <PropertyGroup>
- <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+  <RazorLangVersion>3.0</RazorLangVersion>
 </PropertyGroup>
 ```
 
-* Met à `Version` jour l’attribut `<PackageReference>` sur les `Microsoft.AspNetCore.*` éléments restants pour les packages vers l' `3.0.0-preview5-19227-01`aperçu actuel (par exemple,).
-
-  S’il n’existe pas de version 3,0 d’un package, le package peut avoir été déconseillé dans 3,0. Un grand nombre de ces packages font `Microsoft.AspNetCore.App` partie de et ne doivent pas être référencés individuellement. Pour obtenir une liste préliminaire des packages qui ne sont plus produits dans 3,0, consultez [arrêter la production de packages pour les assemblys de Framework partagé dans 3,0 (ASPNET/AspNetCore #3756)](https://github.com/aspnet/AspNetCore/issues/3756). L' *infrastructure partagée* est l’ensemble d’assemblys (fichiers *. dll* ) qui sont installés sur l’ordinateur et référencés par `Microsoft.AspNetCore.App`. Pour plus d’informations, consultez [Le framework partagé](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/).
-
-* Les assemblys de plusieurs composants notables ont été `Microsoft.AspNetCore.App` supprimés de dans 3,0. Ajoutez `<PackageReference>` des éléments si vous utilisez des API à partir de packages listés dans des [assemblys en cours de suppression de Microsoft. AspNetCore. app 3,0 (ASPNET/AspNetCore #3755)](https://github.com/aspnet/AspNetCore/issues/3755).
-
-  Voici quelques exemples de composants supprimés :
-
-  * `Microsoft.AspNet.WebApi.Client`
-  * `Microsoft.EntityFrameworkCore`
-  * `System.Data.SqlClient`
-
-  La liste des assemblys en cours `Microsoft.AspNetCore.App` d’expédition n’a pas été finalisée et sera modifiée avant 3,0 RTM.
-
-  Examinons le code ci-dessous.
-
-  ```csharp
-  var branches = await response.Content.ReadAsAsync<IEnumerable<GitHubBranch>>();
-  ```
-
-  La `ReadAsAsync` méthode appelée dans le code précédent est incluse dans `Microsoft.AspNet.WebApi.Client`. Installez le package NuGet [Microsoft. Aspnet. WebApi. client](https://www.nuget.org/packages/Microsoft.AspNet.WebApi.Client/) pour résoudre le problème de compilation dans 3,0.
-
-* Ajoutez la [prise en charge de JSON.net](#jsonnet-support).
+### <a name="in-process-hosting-model"></a>Modèle d’hébergement in-process
 
 * Les projets sont par défaut du [modèle d’hébergement in-process](xref:host-and-deploy/aspnet-core-module#in-process-hosting-model) dans ASP.net Core 3,0 ou version ultérieure. Vous pouvez éventuellement supprimer la `<AspNetCoreHostingModel>` propriété dans le fichier projet si sa valeur est. `InProcess`
 
@@ -199,6 +337,8 @@ Les applications et les bibliothèques qui ciblent ASP.NET Core 2,1 ou version u
 ## <a name="jsonnet-support"></a>Support Json.NET
 
 Dans le cadre du travail d' [amélioration du ASP.net Core Framework partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [JSON.net](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de la ASP.net Core Framework partagé. Votre application peut nécessiter cette référence si elle `Newtonsoft.Json`utilise des fonctionnalités spécifiques telles que les JsonPatch ou les convertisseurs ou si elle [met en forme](xref:web-api/advanced/formatting) `Newtonsoft.Json`des types spécifiques.
+
+Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 Signalr, consultez [basculer vers Newtonsoft. JSON](#switch-to-newtonsoftjson) dans ce document.
 
 Pour utiliser Json.NET dans un projet ASP.NET Core 3,0 :
 
@@ -345,6 +485,8 @@ public void Configure(IApplicationBuilder app)
 }
 ```
 
+> [!WARNING]
+> Pour la plupart des applications, `UseAuthentication`les `UseAuthorization`appels à `UseCors` , et doivent apparaître entre les `UseRouting` appels `UseEndpoints` à et pour être effectifs.
 ### <a name="health-checks"></a>Contrôles d’intégrité
 
 Les contrôles d’intégrité utilisent le routage de point de terminaison avec l’hôte générique. Dans `Startup.Configure`, appelez `MapHealthChecks` sur le générateur de points de terminaison avec l’URL de point de terminaison ou le chemin d’accès relatif :
@@ -399,7 +541,7 @@ public class MyController : ControllerBase
 }
 ```
 
-#### <a name="authorization"></a>Authorization
+#### <a name="authorization"></a>Autorisation
 
 Dans les versions antérieures de ASP.net Core, la prise en charge de `[Authorize]` l’autorisation a été fournie via l’attribut. L’intergiciel d’autorisation n’est pas disponible. Dans ASP.NET Core 3,0, l’intergiciel (middleware) d’autorisation est requis. Nous vous recommandons de placer le ASP.net Core middleware d'`UseAuthorization`autorisation () `UseAuthentication`immédiatement après. L’intergiciel d’autorisation peut également être configuré avec une stratégie par défaut, qui peut être remplacée.
 
@@ -789,3 +931,45 @@ Si vous utilisez des fonctionnalités de `Newtonsoft.Json` qui ne sont pas `Syst
 ## <a name="opt-in-to-runtime-compilation"></a>Accepter la compilation au moment de l’exécution
 
 Dans 3,0, la compilation du runtime est un scénario d’abonnement. Pour activer la compilation au moment <xref:mvc/views/view-compilation#runtime-compilation>de l’exécution, consultez.
+
+## <a name="migrating-libraries-via-multi-targeting"></a>Migration de bibliothèques via le multi-ciblage
+
+Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.NET Core. La plupart des bibliothèques qui ont été compilées avec des versions antérieures de ASP.NET Core doivent continuer à fonctionner sans problème. Les conditions suivantes nécessitent la compilation croisée de l’application :
+
+* La bibliothèque s’appuie sur une fonctionnalité qui a une [modification avec rupture](#breaking-api-changes)binaire.
+* La bibliothèque veut tirer parti des nouvelles fonctionnalités de ASP.NET Core 3,0. 
+
+Pour exammple :
+
+```xml
+<Project SDK="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.0" />
+  </ItemGroup>
+</Project>
+```
+
+Utilisez `#ifdefs` pour illuminer les API ASP.net Core 3,0 spécifiques :
+
+```csharp
+var webRootFileProvider =
+#if NETCOREAPP3_0
+    GetRequiredService<IWebHostEnvironment>().WebRootFileProvider;
+#else if NETSTANDARD2_0
+    GetRequiredService<IHostingEnvironment>().WebRootFileProvider;
+#else
+#error unknown target framework
+#endif
+```
+
+## <a name="breaking-api-changes"></a>Interruption des modifications d’API
+
+Pour obtenir des modifications importantes supplémentaires dans la version 3,0, consultez l’annonce https://github.com/aspnet/Announcements/issues?page=2&q=is%3Aissue+is%3Aopen+label%3A%22Breaking+change%22+label%3A3.0.0 référentiel-.
