commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,12 +6,12 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 09/16/2019
 uid: migration/22-to-30
-ms.openlocfilehash: fd2b288df92f734ff51b4924911b432a67a0bd3a
-ms.sourcegitcommit: a11f09c10ef3d4eeab7ae9ce993e7f30427741c1
+ms.openlocfilehash: 46b00eaf6ad978daee51ceed515b9d0625ec88cb
+ms.sourcegitcommit: e5a74f882c14eaa0e5639ff082355e130559ba83
 ms.translationtype: MT
 ms.contentlocale: fr-FR
 ms.lasthandoff: 09/20/2019
-ms.locfileid: "71149368"
+ms.locfileid: "71168313"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrer de ASP.NET Core 2,2 à 3,0
 
@@ -168,7 +168,7 @@ Aucune référence supplémentaire n’est requise pour ces projets :
 
 ASP.net Core 3,0 supprime certains assemblys qui faisaient auparavant partie de la `Microsoft.AspNetCore.App` référence du package. Pour continuer à utiliser les fonctionnalités fournies par ces assemblys, référencez les versions 3,0 des packages correspondants :
 
-* Entity Framework Core-consultez https://docs.microsoft.com/en-us/ef/core/providers/index pour plus d’informations sur le référencement du package spécifique du fournisseur de base de données.
+* Entity Framework Core-consultez https://docs.microsoft.com/ef/core/providers/index pour plus d’informations sur le référencement du package spécifique au fournisseur de base de données.
 
 * La prise en charge de l’interface utilisateur des identités pour l' [interface utilisateur d’identité](xref:security/authentication/identity) peut être ajoutée en référençant le package [Microsoft. AspNetCore. Identity. UI](https://www.nuget.org/packages/Microsoft.AspNetCore.Identity.UI) .
 
@@ -438,7 +438,7 @@ Conseils généraux :
 * Remplacez `IApplicationLifetime` par <xref:Microsoft.Extensions.Hosting.IHostApplicationLifetime> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
 * Remplacez `EnvironmentName` par <xref:Microsoft.Extensions.Hosting.Environments> (<xref:Microsoft.Extensions.Hosting?displayProperty=fullName> espace de noms).
 
-Voici un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard :
+Le code suivant est un exemple de `Startup.Configure` dans une application ASP.net Core 2,2 standard :
 
 ```csharp
 public void Configure(IApplicationBuilder app)
@@ -939,7 +939,7 @@ Les bibliothèques doivent souvent prendre en charge plusieurs versions de ASP.N
 * La bibliothèque s’appuie sur une fonctionnalité qui a une [modification avec rupture](#breaking-api-changes)binaire.
 * La bibliothèque veut tirer parti des nouvelles fonctionnalités de ASP.NET Core 3,0. 
 
-Pour exammple :
+Par exemple :
 
 ```xml
 <Project SDK="Microsoft.NET.Sdk">
@@ -972,4 +972,8 @@ var webRootFileProvider =
 
 ## <a name="breaking-api-changes"></a>Interruption des modifications d’API
 
-Pour obtenir des modifications importantes supplémentaires dans la version 3,0, consultez l’annonce https://github.com/aspnet/Announcements/issues?page=2&q=is%3Aissue+is%3Aopen+label%3A%22Breaking+change%22+label%3A3.0.0 référentiel-.
+Pour obtenir des modifications avec rupture supplémentaires dans la version 3,0 de ASP.NET Core, consultez le [dépôt ASPNET/announcements](https://github.com/aspnet/Announcements/issues?page=2&q=is%3Aissue+is%3Aopen+label%3A%22Breaking+change%22+label%3A3.0.0). Pour obtenir un résumé des modifications avec rupture 2,2 à 3,0 sur .NET Core, ASP.NET Core et Entity Framework Core, consultez [modifications avec rupture pour la migration de la version 2,2 vers 3,0](/dotnet/core/compatibility/2.2-3.0).
+
+## <a name="aspnet-core-30-not-currently-available-for-azure-app-service"></a>ASP.NET Core 3,0 pas disponible actuellement pour la Azure App Service. 
+
+Nous espérons que ce rendez-vous disponible prochainement. Tant que ASP.NET Core 3,0 n’est pas disponible sur Azure App Service, suivez les instructions de la procédure [déployer ASP.net core version préliminaire dans Azure App service](xref:host-and-deploy/azure-apps/index#deploy-aspnet-core-preview-release-to-azure-app-service).
